--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -26,6 +26,9 @@ jobs:
       #
       ############################################
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
 
       - uses: actions/setup-node@v3
         with:
@@ -64,6 +67,22 @@ jobs:
 
       - name: Test
         run: yarn test
+
+      ############################################
+      #
+      # Bump version
+      #
+      ############################################
+      - name: Bump version
+        if: github.ref == 'refs/heads/main'
+        run: |
+          yarn bump-version canary
+          yarn write-changelog
+          git add .
+          git commit -m "chore: bump version [skip ci]"
+          git push origin main
+        env:
+          github_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
         
       ############################################
       #
