--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Release
         run: |
+          > CHANGELOG.md
           if [ "${{ github.ref }}" = "refs/heads/main" ]; then
             yarn release --prerelease
           else
@@ -65,13 +66,3 @@ jobs:
           target_branch: staging
           github_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
           label_name: 'chore: merge release'
-
-      - name: Bump development version
-        if: github.ref == 'refs/heads/main'
-        run: |
-          yarn bump-version
-          git add .
-          git commit -m "chore: bump version"
-          git push origin main
-    
-   
