--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -73,6 +73,12 @@ jobs:
       # Bump version
       #
       ############################################
+      - name: Git config
+        if: github.ref == 'refs/heads/main'
+        run: |
+          git config user.name "Azzapp Dev Bot"
+          git config user.email "azzapp-dev-bot@azzapp.com"
+
       - name: Bump version
         if: github.ref == 'refs/heads/main'
         run: |
