--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,7 +5,7 @@
     "test": "jest",
     "typecheck": "tsc --noEmit",
     "rn:watch": "react-native start",
-    "run:android": "react-native run-android --no-packager",
+    "run:android": "react-native run-android --no-packager --mode developmentDebug --appId=com.azzapp.azzapp_dev",
     "run:ios": "react-native run-ios --no-packager",
     "pod-install": "cd ios && bundle exec pod install",
     "clean": "watchman watch-del-all && rm -Rf node_modules && rm -Rf ios/Pods && rm -Rf ios/build  && cd android && ./gradlew clean",
@@ -69,7 +69,10 @@
     "react-hook-form": "^7.43.9",
     "@hookform/resolvers": "^3.1.0",
     "react-native-blob-util": "^0.18.3",
-    "react-native-share": "^8.2.2"
+    "react-native-share": "^8.2.2",
+    "@reeq/react-native-passkit": "^0.1.2",
+    "react-native-quick-base64": "^2.0.6",
+    "react-native-blob-jsi-helper": "^0.3.1"
   },
   "devDependencies": {
     "@testing-library/react-native": "^12.1.2",
