--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -30,12 +30,20 @@
     "react-intl": "^6.4.4",
     "react-relay": "^14.1.0",
     "sharp": "0.32.1",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "passkit-generator": "^3.1.9",
+    "stream-browserify": "^3.0.0",
+    "path-browserify": "^1.0.1",
+    "os-browserify": "^0.3.0",
+    "google-wallet": "^1.0.16",
+    "encoding": "^0.1.13",
+    "jsonwebtoken": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/react": "18.2.12",
     "@types/react-dom": "^18.2.5",
-    "@vanilla-extract/next-plugin": "^2.1.3"
+    "@vanilla-extract/next-plugin": "^2.1.3",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
