--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -72,7 +72,8 @@
     "react-native-share": "^8.2.2",
     "@reeq/react-native-passkit": "^0.1.2",
     "react-native-quick-base64": "^2.0.6",
-    "react-native-blob-jsi-helper": "^0.3.1"
+    "react-native-blob-jsi-helper": "^0.3.1",
+    "react-native-confirmation-code-field": "^7.3.1"
   },
   "devDependencies": {
     "@testing-library/react-native": "^12.1.2",
