--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-intl": "^6.4.4",
     "react-relay": "^14.1.0",
+    "resend": "^0.17.1",
     "sharp": "0.32.1",
     "server-only": "^0.0.1",
     "passkit-generator": "^3.1.9",
@@ -37,7 +38,8 @@
     "os-browserify": "^0.3.0",
     "google-wallet": "^1.0.16",
     "encoding": "^0.1.13",
-    "jsonwebtoken": "^9.0.1"
+    "jsonwebtoken": "^9.0.1",
+    "twilio": "^3.63.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
