--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -46,6 +46,7 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "^18.2.5",
     "@vanilla-extract/next-plugin": "^2.1.3",
+    "@vanilla-extract/dynamic": "^2.0.3",
     "@types/jsonwebtoken": "^9.0.2"
   }
 }
