feat: 🎸 add carousel interaction & transition for web & mobile (#707)
* feat: 🎸 add carousel interaction & transition for web & mobile

* refactor: 💡 re-export carousel correctly

* refactor: 💡 clean  carousel

* ci: 🎡 add node option for increased old space size

--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -13,6 +13,7 @@ jobs:
     env:
       TURBO_TOKEN: ${{secrets.VERCEL_TOKEN}}
       TURBO_TEAM: azzapp
+      NODE_OPTIONS: --max-old-space-size=4096
     steps:
       - uses: actions/checkout@v3
 
