Deactivate planetscale auto merge (for the moment)

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -170,83 +170,83 @@ jobs:
       # PlanetScale schema migration
       #
       ############################################
-      - name: PlanetScale - Check if migration is needed
-        id: planetscale_migration_needed
-        working-directory: packages/data
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        run: |
-          yarn introspect
-          yarn generate-migration
-          HAS_CHANGE="false"
-          if compgen -G "drizzle/0001*" > /dev/null; then
-              HAS_CHANGE="true"
-          fi
-          echo "has_change=$HAS_CHANGE" >> $GITHUB_OUTPUT
+      # - name: PlanetScale - Check if migration is needed
+      #   id: planetscale_migration_needed
+      #   working-directory: packages/data
+      #   env:
+      #     DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      #   run: |
+      #     yarn introspect
+      #     yarn generate-migration
+      #     HAS_CHANGE="false"
+      #     if compgen -G "drizzle/0001*" > /dev/null; then
+      #         HAS_CHANGE="true"
+      #     fi
+      #     echo "has_change=$HAS_CHANGE" >> $GITHUB_OUTPUT
          
-      - name: PlanetScale - Extract branch name
-        if: ${{ steps.planetscale_migration_needed.outputs.has_change == 'true'}}
-        run: echo "branch=$(echo ci-${GITHUB_SHA})" >> $GITHUB_OUTPUT
-        id: extract_branch
+      # - name: PlanetScale - Extract branch name
+      #   if: ${{ steps.planetscale_migration_needed.outputs.has_change == 'true'}}
+      #   run: echo "branch=$(echo ci-${GITHUB_SHA})" >> $GITHUB_OUTPUT
+      #   id: extract_branch
         
-      - name: PlanetScale - Create a branch
-        if: ${{ steps.planetscale_migration_needed.outputs.has_change == 'true'}}
-        uses: planetscale/create-branch-action@v1
-        id: create_branch
-        with:
-          org_name: azzapp
-          database_name: azzapp
-          branch_name: ${{ steps.extract_branch.outputs.branch }}
-          from: ${{ github.ref_name }}
-          wait: true
-        env:
-          PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_SERVICE_TOKEN_ID }}
-          PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
+      # - name: PlanetScale - Create a branch
+      #   if: ${{ steps.planetscale_migration_needed.outputs.has_change == 'true'}}
+      #   uses: planetscale/create-branch-action@v1
+      #   id: create_branch
+      #   with:
+      #     org_name: azzapp
+      #     database_name: azzapp
+      #     branch_name: ${{ steps.extract_branch.outputs.branch }}
+      #     from: ${{ github.ref_name }}
+      #     wait: true
+      #   env:
+      #     PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_SERVICE_TOKEN_ID }}
+      #     PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
       
-      - name: PlanetScale - Create a password
-        if: ${{ steps.planetscale_migration_needed.outputs.has_change == 'true'}}
-        uses: planetscale/create-branch-password-action@v1
-        id: create_password
-        with:
-          org_name: azzapp
-          database_name: azzapp
-          branch_name: ${{ steps.extract_branch.outputs.branch }}
-          name: 'pass-${{ steps.extract_branch.outputs.branch }}'
-        env:
-          PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_SERVICE_TOKEN_ID }}
-          PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
+      # - name: PlanetScale - Create a password
+      #   if: ${{ steps.planetscale_migration_needed.outputs.has_change == 'true'}}
+      #   uses: planetscale/create-branch-password-action@v1
+      #   id: create_password
+      #   with:
+      #     org_name: azzapp
+      #     database_name: azzapp
+      #     branch_name: ${{ steps.extract_branch.outputs.branch }}
+      #     name: 'pass-${{ steps.extract_branch.outputs.branch }}'
+      #   env:
+      #     PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_SERVICE_TOKEN_ID }}
+      #     PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
 
-      - name: PlanetScale - Apply drizzle changes
-        if: ${{ steps.planetscale_migration_needed.outputs.has_change == 'true'}}
-        working-directory: packages/data
-        run: |
-          export DATABASE_URL="mysql://${{ steps.create_password.outputs.username }}:${{ steps.create_password.outputs.password }}@${{ steps.create_password.outputs.hostname }}/azzapp?ssl={\"rejectUnauthorized\":true}"
-          yarn push-migration
+      # - name: PlanetScale - Apply drizzle changes
+      #   if: ${{ steps.planetscale_migration_needed.outputs.has_change == 'true'}}
+      #   working-directory: packages/data
+      #   run: |
+      #     export DATABASE_URL="mysql://${{ steps.create_password.outputs.username }}:${{ steps.create_password.outputs.password }}@${{ steps.create_password.outputs.hostname }}/azzapp?ssl={\"rejectUnauthorized\":true}"
+      #     yarn push-migration
             
 
-      - name: PlanetScale - Create a deploy request
-        if: ${{ steps.planetscale_migration_needed.outputs.has_change == 'true'}}
-        uses: planetscale/create-deploy-request-action@v1
-        id: create_deploy_request
-        with:
-          org_name: azzapp
-          database_name: azzapp
-          branch_name: ${{ steps.extract_branch.outputs.branch }}
-        env:
-          PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_SERVICE_TOKEN_ID }}
-          PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
+      # - name: PlanetScale - Create a deploy request
+      #   if: ${{ steps.planetscale_migration_needed.outputs.has_change == 'true'}}
+      #   uses: planetscale/create-deploy-request-action@v1
+      #   id: create_deploy_request
+      #   with:
+      #     org_name: azzapp
+      #     database_name: azzapp
+      #     branch_name: ${{ steps.extract_branch.outputs.branch }}
+      #   env:
+      #     PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_SERVICE_TOKEN_ID }}
+      #     PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
             
-      - name: PlanetScale - Deploy the changes
-        if: ${{ steps.planetscale_migration_needed.outputs.has_change == 'true'}}
-        uses: planetscale/deploy-deploy-request-action@v1
-        with:
-          org_name: azzapp
-          database_name: azzapp
-          number: ${{ steps.create_deploy_request.outputs.number }}
-          wait: true
-        env:
-          PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_SERVICE_TOKEN_ID }}
-          PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
+      # - name: PlanetScale - Deploy the changes
+      #   if: ${{ steps.planetscale_migration_needed.outputs.has_change == 'true'}}
+      #   uses: planetscale/deploy-deploy-request-action@v1
+      #   with:
+      #     org_name: azzapp
+      #     database_name: azzapp
+      #     number: ${{ steps.create_deploy_request.outputs.number }}
+      #     wait: true
+      #   env:
+      #     PLANETSCALE_SERVICE_TOKEN_ID: ${{ secrets.PLANETSCALE_SERVICE_TOKEN_ID }}
+      #     PLANETSCALE_SERVICE_TOKEN: ${{ secrets.PLANETSCALE_SERVICE_TOKEN }}
 
       ############################################
       #
