--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,8 +20,14 @@
     "@azzapp/shared": "0.1.3-canary.2",
     "@expo-google-fonts/anton": "^0.2.3",
     "@expo-google-fonts/archivo": "^0.2.3",
+    "@expo-google-fonts/courier-prime": "^0.2.3",
     "@expo-google-fonts/cinzel": "^0.2.3",
+    "@expo-google-fonts/dm-serif-display": "^0.2.3",
+    "@expo-google-fonts/fauna-one": "^0.2.3",
     "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/fraunces": "^0.2.3",
+    "@expo-google-fonts/josefin-sans": "^0.2.3",
+    "@expo-google-fonts/libre-caslon-text": "^0.2.3",
     "@expo-google-fonts/jost": "^0.2.3",
     "@expo-google-fonts/koulen": "^0.2.3",
     "@expo-google-fonts/limelight": "^0.2.3",
@@ -29,9 +35,14 @@
     "@expo-google-fonts/manrope": "^0.2.3",
     "@expo-google-fonts/monoton": "^0.2.3",
     "@expo-google-fonts/montserrat": "^0.2.3",
+    "@expo-google-fonts/open-sans": "^0.2.3",
+    "@expo-google-fonts/playfair-display": "^0.2.3",
+    "@expo-google-fonts/plus-jakarta-sans": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo-google-fonts/raleway": "^0.2.3",
     "@expo-google-fonts/righteous": "^0.2.3",
+    "@expo-google-fonts/source-sans-pro": "^0.2.3",
+    "@expo-google-fonts/yeseva-one": "^0.2.3",
     "@expo-google-fonts/rye": "^0.2.3",
     "@formatjs/intl-locale": "^3.3.2",
     "@formatjs/intl-pluralrules": "^5.2.4",
