chore: dependencies version upgrade + react-native sentry (#771)
* upgrade dependencies

* Upgrade app dependencies

* Update yarn.lock

* Update yarn.lock

* Add sentry to client app

--- a/packages/app/eas.json
+++ b/packages/app/eas.json
@@ -4,7 +4,10 @@
   },
   "build": {
     "base": {
-      "node": "18.12.0"
+      "node": "18.12.0",
+      "env": {
+        "SENTRY_DSN": "https://13a33b3788344ceea14cf298a220fead@o4505353883680768.ingest.sentry.io/4505358469038080"
+      }
     },
     "development": {
       "extends": "base",
@@ -18,7 +21,8 @@
       },
       "env": {
         "NEXT_PUBLIC_URL": "https://azzapp-dev.vercel.app/",
-        "NEXT_PUBLIC_API_ENDPOINT": "https://azzapp-dev.vercel.app/api"
+        "NEXT_PUBLIC_API_ENDPOINT": "https://azzapp-dev.vercel.app/api",
+        "DEPLOYMENT_ENVIRONMENT": "development"
       }
     },
     "staging": {
@@ -30,7 +34,8 @@
       },
       "env": {
         "NEXT_PUBLIC_URL": "https://azzapp-staging.vercel.app/",
-        "NEXT_PUBLIC_API_ENDPOINT": "https://azzapp-staging.vercel.app/api"
+        "NEXT_PUBLIC_API_ENDPOINT": "https://azzapp-staging.vercel.app/api",
+        "DEPLOYMENT_ENVIRONMENT": "staging"
       }
     },
     "production": {
@@ -41,7 +46,8 @@
       },
       "env": {
         "NEXT_PUBLIC_URL": "https://azzapp.vercel.app/",
-        "NEXT_PUBLIC_API_ENDPOINT": "https://azzapp.vercel.app/api"
+        "NEXT_PUBLIC_API_ENDPOINT": "https://azzapp.vercel.app/api",
+        "DEPLOYMENT_ENVIRONMENT": "production"
       }
     }
   },
