--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -163,7 +163,6 @@
         //   { "ignoreArrowShorthand": true }
         // ],
         "no-dupe-class-members": "off",
-        "@typescript-eslint/no-duplicate-imports": "error",
         "@typescript-eslint/no-explicit-any": "off",
         // "@typescript-eslint/no-floating-promises": "error",
         // "@typescript-eslint/no-for-in-array": "error",
@@ -179,7 +178,6 @@
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-non-null-asserted-nullish-coalescing": "error",
         "@typescript-eslint/no-non-null-asserted-optional-chain": "error",
-        "@typescript-eslint/no-parameter-properties": "error",
         // "@typescript-eslint/no-redundant-type-constituents": "error",
         "@typescript-eslint/no-this-alias": "error",
         // "@typescript-eslint/no-throw-literal": "error",
@@ -195,9 +193,9 @@
         "@typescript-eslint/no-useless-constructor": "error",
         "@typescript-eslint/no-useless-empty-export": "error",
         // "@typescript-eslint/prefer-nullish-coalescing": "error",
-        "@typescript-eslint/prefer-optional-chain": "error",
+        // "@typescript-eslint/prefer-optional-chain": "error",
         "@typescript-eslint/prefer-ts-expect-error": "error",
-        "@typescript-eslint/sort-type-union-intersection-members": "error"
+        "@typescript-eslint/sort-type-constituents": "error"
         // "@typescript-eslint/switch-exhaustiveness-check": "error"
       },
       "overrides": [
