--- a/package.json
+++ b/package.json
@@ -39,60 +39,63 @@
     "graphql-codegen --watch"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.21.0",
-    "@babel/core": "^7.21.3",
-    "@babel/plugin-transform-react-jsx": "^7.21.0",
-    "@babel/plugin-syntax-jsx": "7.22.5",
-    "@babel/preset-typescript": "^7.21.0",
-    "@babel/register": "^7.21.0",
-    "@babel/runtime": "^7.21.0",
+    "@babel/cli": "7.22.10",
+    "@babel/core": "7.22.10",
+    "@babel/preset-typescript": "7.22.5",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/runtime": "^7.22.10",
+    "@babel/plugin-transform-react-jsx": "^7.22.5",
+    "@babel/plugin-syntax-jsx": "^7.22.5",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "babel-plugin-formatjs": "^10.5.3",
+    "babel-plugin-relay": "^14.1.0",
+    "babel-jest": "^29.6.3",
     "@formatjs/cli-lib": "^6.1.3",
     "@graphql-codegen/add": "^5.0.0",
-    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/schema-ast": "^4.0.0",
-    "@graphql-codegen/typescript": "^4.0.0",
-    "@graphql-codegen/typescript-resolvers": "^4.0.0",
-    "@octokit/rest": "^19.0.13",
-    "@svgr/webpack": "^7.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-resolvers": "^4.0.1",
+    "@octokit/rest": "^20.0.1",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/blessed": "^0.1.21",
-    "@types/jest": "^29.5.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
-    "babel-jest": "^29.5.0",
-    "babel-plugin-formatjs": "^10.4.0",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "babel-plugin-relay": "^14.1.0",
+    "@types/jest": "^29.5.3",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "babel-plugin-module-resolver": "5.0.0",
     "blessed": "^0.1.81",
     "blessed-xterm": "^1.4.4",
-    "eslint": "^8.37.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-formatjs": "^4.9.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-formatjs": "^4.10.3",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "fix-esm": "^1.0.1",
+    "metro-react-native-babel-preset": "^0.77.0",
     "git-spawned-stream": "^1.0.1",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
-    "metro-react-native-babel-preset": "0.73.9",
-    "node-fetch": "2",
-    "patch-package": "^6.5.1",
+    "jest": "^29.6.3",
+    "jest-expo": "^49.0.0",
+    "node-fetch": "^2",
+    "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.8.7",
+    "prettier": "^3.0.2",
     "react-native-version": "^4.0.0",
     "relay-compiler": "^14.1.0",
-    "semver": "^7.5.3",
+    "semver": "^7.5.4",
     "tagged-versions": "^1.3.0",
-    "ts-jest": "^29.1.0",
-    "turbo": "^1.8.8",
-    "typescript": "^5.1.3"
+    "ts-jest": "^29.1.1",
+    "turbo": "^1.10.12",
+    "typescript": "^5.1.6"
   },
   "resolutions": {
-    "@types/react": "18.2.12",
-    "graphql": "16.6.0"
+    "@types/react": "^18.2.20",
+    "graphql": "^16.8.0"
   }
 }
