--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,16 +20,16 @@
     "@azzapp/shared": "0.1.3-canary.4",
     "@expo-google-fonts/anton": "^0.2.3",
     "@expo-google-fonts/archivo": "^0.2.3",
-    "@expo-google-fonts/courier-prime": "^0.2.3",
     "@expo-google-fonts/cinzel": "^0.2.3",
+    "@expo-google-fonts/courier-prime": "^0.2.3",
     "@expo-google-fonts/dm-serif-display": "^0.2.3",
     "@expo-google-fonts/fauna-one": "^0.2.3",
-    "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/fraunces": "^0.2.3",
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/josefin-sans": "^0.2.3",
-    "@expo-google-fonts/libre-caslon-text": "^0.2.3",
     "@expo-google-fonts/jost": "^0.2.3",
     "@expo-google-fonts/koulen": "^0.2.3",
+    "@expo-google-fonts/libre-caslon-text": "^0.2.3",
     "@expo-google-fonts/limelight": "^0.2.3",
     "@expo-google-fonts/lora": "^0.2.3",
     "@expo-google-fonts/manrope": "^0.2.3",
@@ -41,84 +41,77 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo-google-fonts/raleway": "^0.2.3",
     "@expo-google-fonts/righteous": "^0.2.3",
+    "@expo-google-fonts/rye": "^0.2.3",
     "@expo-google-fonts/source-sans-pro": "^0.2.3",
     "@expo-google-fonts/yeseva-one": "^0.2.3",
-    "@expo-google-fonts/rye": "^0.2.3",
     "@formatjs/intl-locale": "^3.3.2",
     "@formatjs/intl-pluralrules": "^5.2.4",
     "@formatjs/intl-relativetimeformat": "^11.2.4",
-    "@hookform/resolvers": "^3.1.0",
-    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@hookform/resolvers": "^3.2.0",
+    "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@reeq/react-native-passkit": "^0.1.2",
+    "@sentry/react-native": "^5.9.1",
     "@shopify/flash-list": "^1.5.0",
-    "@shopify/react-native-skia": "^0.1.197",
-    "appcenter": "^4.4.5",
-    "appcenter-analytics": "^4.4.5",
-    "appcenter-crashes": "^4.4.5",
+    "@shopify/react-native-skia": "^0.1.202",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^48.0.19",
-    "expo-clipboard": "^4.3.0",
-    "expo-contacts": "^12.0.1",
-    "expo-font": "~11.1.1",
-    "expo-haptics": "^12.2.1",
-    "expo-image": "^1.3.1",
-    "expo-linear-gradient": "^12.1.2",
-    "expo-media-library": "^15.2.3",
-    "expo-permissions": "^14.1.1",
-    "expo-sensors": "12.3.0",
-    "graphql": "^16.6.0",
+    "expo": "^49.0.7",
+    "expo-clipboard": "^4.3.1",
+    "expo-contacts": "^12.2.0",
+    "expo-font": "^11.4.0",
+    "expo-haptics": "^12.4.0",
+    "expo-image": "^1.3.2",
+    "expo-linear-gradient": "^12.3.0",
+    "expo-media-library": "^15.4.1",
+    "expo-permissions": "^14.2.1",
+    "expo-sensors": "^12.3.0",
+    "graphql": "^16.8.0",
     "graphql-relay": "^0.10.0",
-    "i18n-iso-countries": "^7.5.0",
-    "libphonenumber-js": "^1.10.24",
+    "i18n-iso-countries": "^7.6.0",
+    "libphonenumber-js": "^1.10.41",
     "lodash": "^4.17.21",
-    "lottie-react-native": "^6.0.0-rc.6",
-    "random-seed": "0.3.0",
+    "lottie-react-native": "^6.2.0",
     "react": "^18.2.0",
-    "react-hook-form": "^7.43.9",
+    "react-hook-form": "^7.45.4",
     "react-intl": "^6.4.4",
     "react-native": "0.71.5",
     "react-native-blob-jsi-helper": "^0.3.1",
-    "react-native-blob-util": "^0.18.3",
+    "react-native-blob-util": "^0.19.1",
     "react-native-confirmation-code-field": "^7.3.1",
-    "react-native-email-link": "^1.14.5",
+    "react-native-email-link": "^1.14.6",
     "react-native-encrypted-storage": "^4.0.3",
-    "react-native-gesture-handler": "2.12.0",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-haptic-feedback": "^2.0.3",
-    "react-native-localize": "^2.2.6",
+    "react-native-localize": "^3.0.2",
     "react-native-mime-types": "^2.4.0",
-    "react-native-mmkv": "^2.6.3",
+    "react-native-mmkv": "^2.10.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-qrcode-svg": "^6.2.0",
-    "react-native-quick-base64": "^2.0.6",
+    "react-native-quick-base64": "^2.0.7",
     "react-native-reanimated": "^2.17.0",
-    "react-native-reanimated-carousel": "^3.3.0",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "3.20.0",
-    "react-native-share": "^8.2.2",
-    "react-native-svg": "^13.9.0",
-    "react-native-tab-view": "^3.5.1",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.24.0",
+    "react-native-share": "^9.2.3",
+    "react-native-svg": "^13.12.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.1.6",
-    "react-native-view-shot": "^3.5.0",
-    "react-native-vision-camera": "^2.15.4",
-    "react-phone-number-input": "^3.2.19",
+    "react-native-view-shot": "^3.7.0",
+    "react-native-vision-camera": "^2.15.6",
+    "react-phone-number-input": "^3.3.4",
     "react-relay": "^14.1.0",
     "use-debounce": "^9.0.4",
-    "zod": "^3.21.4"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@testing-library/react-native": "^12.1.2",
+    "@testing-library/react-native": "^12.2.2",
     "@types/chroma-js": "^2.4.0",
-    "@types/react": "18.2.12",
-    "@types/react-relay": "^14.1.2",
+    "@types/react": "^18.2.20",
+    "@types/react-relay": "^14.1.4",
     "@types/react-test-renderer": "^18.0.0",
-    "@types/react-transition-group": "^4.4.5",
     "@types/relay-test-utils": "^14.1.0",
     "copyfiles": "^2.4.1",
-    "fb-watchman": "^2.0.2",
-    "jest-expo": "^48.0.2",
-    "react-native-dotenv": "^3.4.8",
+    "react-native-dotenv": "^3.4.9",
     "react-native-monorepo-tools": "^1.2.1",
     "react-test-renderer": "^18.2.0",
     "relay-test-utils": "^14.1.0",
