--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -27,14 +27,14 @@
     "classnames": "^2.3.2",
     "drizzle-orm": "0.27.0",
     "lodash": "^4.17.21",
-    "next": "^13.4.10",
+    "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zod": "^3.21.4"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "^18.2.5"
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7"
   }
 }
