--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -38,20 +38,20 @@
     "@azzapp/i18n": "0.1.3-canary.4",
     "@azzapp/relay": "0.1.3-canary.4",
     "@azzapp/shared": "0.1.3-canary.4",
-    "@graphql-tools/schema": "^7.0.0",
+    "@graphql-tools/schema": "^10.0.0",
     "@paralleldrive/cuid2": "^2.2.0",
     "@planetscale/database": "^1.10.0",
     "dataloader": "^2.2.2",
     "drizzle-orm": "0.27.0",
-    "graphql": "^16.6.0",
+    "graphql": "^16.8.0",
     "graphql-relay": "^0.10.0",
-    "graphql-scalars": "^1.21.3",
+    "graphql-scalars": "^1.22.2",
     "graphql-tag": "^2.12.6",
     "lodash": "^4.17.21",
-    "zod": "^3.21.4"
+    "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.192",
+    "@types/lodash": "4.14.197",
     "drizzle-kit": "0.19.3"
   }
 }
