--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -19,14 +19,13 @@
     "dev"
   ],
   "dependencies": {
-    "libphonenumber-js": "^1.10.24",
-    "react-relay": "^14.1.0",
-    "validator": "13.9.0",
+    "libphonenumber-js": "^1.10.41",
+    "validator": "^13.11.0",
     "vcard-creator": "^0.6.0",
-    "iron-webcrypto": "^0.7.1"
+    "iron-webcrypto": "^0.8.0"
   },
   "devDependencies": {
-    "@types/react-relay": "^14.1.2",
-    "@types/validator": "^13.7.14"
+    "@types/relay-runtime": "^14.1.12",
+    "@types/validator": "^13.11.1"
   }
 }
