--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,34 +17,31 @@
     "@azzapp/i18n": "0.1.3-canary.4",
     "@azzapp/relay": "0.1.3-canary.4",
     "@azzapp/shared": "0.1.3-canary.4",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@formatjs/swc-plugin-experimental": "^0.3.7",
-    "@paralleldrive/cuid2": "^2.2.0",
-    "bcrypt-ts": "^3.0.0",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "bcrypt-ts": "^4.0.0",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
-    "next": "^13.4.10",
+    "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.4.4",
-    "react-relay": "^14.1.0",
-    "resend": "^0.17.1",
-    "sharp": "0.32.1",
+    "resend": "^0.17.2",
+    "sharp": "^0.32.5",
     "server-only": "^0.0.1",
-    "passkit-generator": "^3.1.9",
+    "passkit-generator": "^3.1.11",
     "stream-browserify": "^3.0.0",
     "path-browserify": "^1.0.1",
     "os-browserify": "^0.3.0",
     "google-wallet": "^1.0.16",
     "encoding": "^0.1.13",
     "jsonwebtoken": "^9.0.1",
-    "twilio": "^3.63.0"
+    "twilio": "^4.15.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "^18.2.5",
-    "@vanilla-extract/next-plugin": "^2.1.3",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@vanilla-extract/next-plugin": "^2.3.0",
     "@vanilla-extract/dynamic": "^2.0.3",
     "@types/jsonwebtoken": "^9.0.2"
   }
