--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -25,9 +25,11 @@
     "@expo-google-fonts/dm-serif-display": "^0.2.3",
     "@expo-google-fonts/fauna-one": "^0.2.3",
     "@expo-google-fonts/fraunces": "^0.2.3",
+    "@expo-google-fonts/great-vibes": "^0.2.3",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/josefin-sans": "^0.2.3",
     "@expo-google-fonts/jost": "^0.2.3",
+    "@expo-google-fonts/kaushan-script": "^0.2.3",
     "@expo-google-fonts/koulen": "^0.2.3",
     "@expo-google-fonts/libre-caslon-text": "^0.2.3",
     "@expo-google-fonts/limelight": "^0.2.3",
@@ -35,6 +37,7 @@
     "@expo-google-fonts/manrope": "^0.2.3",
     "@expo-google-fonts/monoton": "^0.2.3",
     "@expo-google-fonts/montserrat": "^0.2.3",
+    "@expo-google-fonts/mr-dafoe": "^0.2.3",
     "@expo-google-fonts/open-sans": "^0.2.3",
     "@expo-google-fonts/playfair-display": "^0.2.3",
     "@expo-google-fonts/plus-jakarta-sans": "^0.2.3",
@@ -42,6 +45,7 @@
     "@expo-google-fonts/raleway": "^0.2.3",
     "@expo-google-fonts/righteous": "^0.2.3",
     "@expo-google-fonts/rye": "^0.2.3",
+    "@expo-google-fonts/seaweed-script": "^0.2.3",
     "@expo-google-fonts/source-sans-pro": "^0.2.3",
     "@expo-google-fonts/yeseva-one": "^0.2.3",
     "@formatjs/intl-locale": "^3.3.2",
