chore: server perf (#859)
* chore: database connections monitoring system

* chore: session bound memoization system

* add @parcel/watcher for graphql-code-gen

* chore: denormalize profile stats

* chore: refactor loaders mechanism

* chore: Defer StaticMedia loading

For most usage we don't need static media entity at all, by deferring the loading we reduce greatly the number of database request

* chore: Defer media loading

By encoding the type (v: and i: for video and image) of the media in the database id we deffer the loading from the media table, reducing greatly the number of sql request (most of the time we only use id and kind)

* fix: Cover media disappearing

* chore: fix types

--- a/codegen.yml
+++ b/codegen.yml
@@ -17,10 +17,10 @@ generates:
       useImplementingTypes: true
       mappers:
         Profile: ../../domains#Profile as ProfileModel
-        StaticMedia: ../../domains#StaticMedia as StaticMediaModel
+        StaticMedia: ../MediaResolvers#DefferedStaticMedia as StaticMediaModel
         ProfileCategory: ../../domains#ProfileCategory as ProfileCategoryModel
-        MediaImage: ../../domains#Media as MediaModel
-        MediaVideo: ../../domains#Media as MediaModel
+        MediaImage: ../MediaResolvers#DefferedMedia as MediaImageModel
+        MediaVideo: ../MediaResolvers#DefferedMedia as MediaVideoModel
         CompanyActivity: ../../domains#CompanyActivity as CompanyActivityModel
         Post: ../../domains#Post as PostModel
         PostComment: ../../domains#PostComment as PostCommentModel
