--- a/package.json
+++ b/package.json
@@ -41,17 +41,14 @@
   "devDependencies": {
     "@babel/cli": "7.22.10",
     "@babel/core": "7.22.10",
-    "@babel/preset-typescript": "7.22.5",
-    "@babel/preset-env": "^7.22.10",
-    "@babel/runtime": "^7.22.10",
-    "@babel/plugin-transform-react-jsx": "^7.22.5",
-    "@babel/plugin-syntax-jsx": "^7.22.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "babel-plugin-formatjs": "^10.5.3",
-    "babel-plugin-relay": "^14.1.0",
-    "babel-jest": "^29.6.3",
+    "@babel/plugin-syntax-jsx": "^7.22.5",
+    "@babel/plugin-transform-react-jsx": "^7.22.5",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-typescript": "7.22.5",
+    "@babel/runtime": "^7.22.10",
     "@formatjs/cli-lib": "^6.1.3",
     "@graphql-codegen/add": "^5.0.0",
     "@graphql-codegen/cli": "^5.0.0",
@@ -59,6 +56,7 @@
     "@graphql-codegen/typescript": "^4.0.1",
     "@graphql-codegen/typescript-resolvers": "^4.0.1",
     "@octokit/rest": "^20.0.1",
+    "@parcel/watcher": "^2.3.0",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-hooks": "^8.0.1",
@@ -66,7 +64,10 @@
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
+    "babel-jest": "^29.6.3",
+    "babel-plugin-formatjs": "^10.5.3",
     "babel-plugin-module-resolver": "5.0.0",
+    "babel-plugin-relay": "^14.1.0",
     "blessed": "^0.1.81",
     "blessed-xterm": "^1.4.4",
     "eslint": "^8.47.0",
@@ -77,11 +78,11 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "metro-react-native-babel-preset": "^0.77.0",
     "git-spawned-stream": "^1.0.1",
     "husky": "^8.0.3",
     "jest": "^29.6.3",
     "jest-expo": "^49.0.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "node-fetch": "^2",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
