--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -82,6 +82,7 @@
     "react-native": "0.71.13",
     "react-native-blob-jsi-helper": "^0.3.1",
     "react-native-blob-util": "^0.19.1",
+    "react-native-bootsplash": "^5.0.2",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-email-link": "^1.14.6",
     "react-native-encrypted-storage": "^4.0.3",
