--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "scripts": {
     "postinstall": "patch-package",
-    "prepare": "husky install",
     "lint": "eslint .",
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
@@ -70,6 +69,7 @@
     "babel-plugin-relay": "^14.1.0",
     "blessed": "^0.1.81",
     "blessed-xterm": "^1.4.4",
+    "csv-stringify": "^6.4.2",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -79,7 +79,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "git-spawned-stream": "^1.0.1",
-    "husky": "^8.0.3",
     "jest": "^29.6.3",
     "jest-expo": "^49.0.0",
     "metro-react-native-babel-preset": "^0.77.0",
