--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -280,7 +280,7 @@ jobs:
           elif [ "$GITHUB_REF" == "refs/heads/main" ]; then
             ADDITIONAL_ARGS="--git-branch=main"
           fi
-          vercel pull --yes --environment=$environment --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
+          vercel pull --yes --environment=$ENVIRONMENT --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
 
       - name: Azzapp Web - Vercel build
         env:
@@ -319,7 +319,7 @@ jobs:
           elif [ "$GITHUB_REF" == "refs/heads/main" ]; then
             ADDITIONAL_ARGS="--git-branch=main"
           fi
-          vercel pull --yes --environment=$environment --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
+          vercel pull --yes --environment=$ENVIRONMENT --token=${{ secrets.VERCEL_TOKEN }} $ADDITIONAL_ARGS
 
       - name: Azzapp Backoffice - Vercel build
         env:
