--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "next": "^13.4.19",
     "os-browserify": "^0.3.0",
+    "p-limit": "^4.0.0",
     "passkit-generator": "^3.1.11",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
