--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -25,7 +25,7 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
     "classnames": "^2.3.2",
-    "drizzle-orm": "0.27.0",
+    "drizzle-orm": "^0.28.6",
     "lodash": "^4.17.21",
     "next": "^13.4.19",
     "react": "^18.2.0",
