--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,12 +17,19 @@
     "@azzapp/i18n": "0.4.1-canary.5",
     "@azzapp/relay": "0.4.1-canary.5",
     "@azzapp/shared": "0.4.1-canary.5",
+    "@envelop/dataloader": "^5.0.1",
+    "@envelop/disable-introspection": "^5.0.1",
+    "@envelop/generic-auth": "^6.0.1",
+    "@envelop/sentry": "^6.0.1",
+    "@graphql-yoga/plugin-persisted-operations": "^2.0.4",
     "@paralleldrive/cuid2": "^2.2.2",
-    "@sentry/nextjs": "^7.68.0",
+    "@sentry/nextjs": "^7.69.0",
+    "@sentry/tracing": "^7.69.0",
     "bcrypt-ts": "^4.0.0",
     "classnames": "^2.3.2",
     "encoding": "^0.1.13",
     "google-wallet": "^1.0.16",
+    "graphql-yoga": "^4.0.4",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "next": "^13.4.19",
