1142 card template category (#1235)
* feat: webcard filter

--- a/codegen.yml
+++ b/codegen.yml
@@ -25,6 +25,7 @@ generates:
         Post: ../../domains#Post as PostModel
         PostComment: ../../domains#PostComment as PostCommentModel
         CardTemplate: ../../domains#CardTemplate as CardTemplateModel
+        CardTemplateType: ../../domains#CardTemplateType as CardTemplateTypeModel
         CoverTemplate: ../../domains#CoverTemplate as CoverTemplateModel
         CoverTemplateData: ../../domains#CoverTemplateData as CoverTemplateDataModel
         CardCover: ../../domains#Profile as ProfileModel
