--- a/packages/app/.gitignore
+++ b/packages/app/.gitignore
@@ -66,6 +66,9 @@ fastlane/test_output
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
 
+# testing
+/coverage
+
 # when using the yarn bundle command
 /ios/assets
 
