--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -48,77 +48,78 @@
     "@expo-google-fonts/seaweed-script": "^0.2.3",
     "@expo-google-fonts/source-sans-pro": "^0.2.3",
     "@expo-google-fonts/yeseva-one": "^0.2.3",
-    "@formatjs/intl-locale": "^3.3.2",
-    "@formatjs/intl-pluralrules": "^5.2.4",
-    "@formatjs/intl-relativetimeformat": "^11.2.4",
-    "@hookform/resolvers": "^3.2.0",
-    "@react-native-async-storage/async-storage": "^1.19.2",
+    "@formatjs/intl-locale": "^3.3.4",
+    "@formatjs/intl-pluralrules": "^5.2.6",
+    "@formatjs/intl-relativetimeformat": "^11.2.6",
+    "@hookform/resolvers": "^3.3.1",
+    "@react-native-async-storage/async-storage": "1.19.3",
     "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-native/metro-config": "^0.73.1",
     "@reeq/react-native-passkit": "^0.1.2",
-    "@sentry/react-native": "^5.9.1",
-    "@shopify/flash-list": "^1.5.0",
-    "@shopify/react-native-skia": "^0.1.202",
+    "@sentry/react-native": "5.10.0",
+    "@shopify/flash-list": "1.6.1",
+    "@shopify/react-native-skia": "0.1.210",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^49.0.8",
-    "expo-clipboard": "^4.3.1",
-    "expo-contacts": "^12.2.0",
-    "expo-font": "^11.4.0",
-    "expo-haptics": "^12.4.0",
-    "expo-image": "^1.3.2",
-    "expo-linear-gradient": "^12.3.0",
-    "expo-media-library": "^15.4.1",
-    "expo-permissions": "^14.2.1",
-    "expo-sensors": "^12.3.0",
-    "graphql": "^16.8.0",
+    "expo": "^49.0.11",
+    "expo-clipboard": "~4.3.1",
+    "expo-contacts": "~12.2.0",
+    "expo-font": "~11.4.0",
+    "expo-haptics": "~12.4.0",
+    "expo-image": "~1.3.3",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-media-library": "~15.4.1",
+    "expo-permissions": "~14.2.1",
+    "expo-sensors": "~12.3.0",
+    "graphql": "^16.8.1",
     "graphql-relay": "^0.10.0",
-    "i18n-iso-countries": "^7.6.0",
-    "libphonenumber-js": "^1.10.41",
+    "i18n-iso-countries": "^7.7.0",
+    "libphonenumber-js": "^1.10.45",
     "lodash": "^4.17.21",
-    "lottie-react-native": "^6.2.0",
+    "lottie-react-native": "6.3.1",
     "react": "^18.2.0",
-    "react-hook-form": "^7.45.4",
-    "react-intl": "^6.4.4",
-    "react-native": "0.71.13",
+    "react-hook-form": "^7.46.2",
+    "react-intl": "^6.4.7",
+    "react-native": "0.72.5",
     "react-native-blob-jsi-helper": "^0.3.1",
     "react-native-blob-util": "^0.19.1",
-    "react-native-bootsplash": "^5.0.2",
+    "react-native-bootsplash": "^5.0.3",
     "react-native-confirmation-code-field": "^7.3.1",
-    "react-native-email-link": "^1.14.6",
+    "react-native-email-link": "^1.14.7",
     "react-native-encrypted-storage": "^4.0.3",
-    "react-native-gesture-handler": "^2.12.1",
-    "react-native-haptic-feedback": "^2.0.3",
+    "react-native-gesture-handler": "~2.13.1",
+    "react-native-haptic-feedback": "^2.2.0",
     "react-native-localize": "^3.0.2",
     "react-native-mime-types": "^2.4.0",
-    "react-native-mmkv": "^2.10.1",
-    "react-native-pager-view": "^6.2.0",
+    "react-native-mmkv": "^2.10.2",
+    "react-native-pager-view": "6.2.1",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-quick-base64": "^2.0.7",
-    "react-native-reanimated": "^2.17.0",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.24.0",
-    "react-native-share": "^9.2.3",
-    "react-native-svg": "^13.12.0",
+    "react-native-reanimated": "~3.5.4",
+    "react-native-safe-area-context": "4.7.2",
+    "react-native-screens": "~3.25.0",
+    "react-native-share": "^9.4.1",
+    "react-native-svg": "^13.14.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.1.6",
-    "react-native-vision-camera": "^2.15.6",
-    "react-phone-number-input": "^3.3.4",
+    "react-native-vision-camera": "^2.16.1",
+    "react-phone-number-input": "^3.3.6",
     "react-relay": "^14.1.0",
     "use-debounce": "^9.0.4",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@testing-library/react-native": "^12.2.2",
-    "@types/chroma-js": "^2.4.0",
-    "@types/react": "^18.2.20",
-    "@types/react-relay": "^14.1.4",
-    "@types/react-test-renderer": "^18.0.0",
-    "@types/relay-test-utils": "^14.1.0",
+    "@testing-library/react-native": "^12.3.0",
+    "@types/chroma-js": "^2.4.1",
+    "@types/react": "^18.2.23",
+    "@types/react-relay": "^14.1.6",
+    "@types/react-test-renderer": "^18.0.3",
+    "@types/relay-test-utils": "^14.1.1",
     "copyfiles": "^2.4.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-monorepo-tools": "^1.2.1",
     "react-test-renderer": "^18.2.0",
     "relay-test-utils": "^14.1.0",
-    "rimraf": "^4.1.2"
+    "rimraf": "^5.0.5"
   }
 }
