--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -62,6 +62,7 @@
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
     "expo": "^49.0.11",
+    "expo-blur": "^12.6.0",
     "expo-clipboard": "~4.3.1",
     "expo-contacts": "~12.2.0",
     "expo-font": "~11.4.0",
