--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -22,10 +22,12 @@
     "libphonenumber-js": "^1.10.45",
     "validator": "^13.11.0",
     "vcard-creator": "^0.6.0",
-    "iron-webcrypto": "^0.8.0"
+    "iron-webcrypto": "^0.8.0",
+    "chroma-js": "^2.4.2"
   },
   "devDependencies": {
     "@types/relay-runtime": "^14.1.12",
-    "@types/validator": "^13.11.1"
+    "@types/validator": "^13.11.1",
+    "@types/chroma-js": "^2.4.1"
   }
 }
