--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -61,16 +61,15 @@
     "@shopify/react-native-skia": "0.1.210",
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
-    "expo": "^49.0.11",
+    "expo": "^49.0.13",
     "expo-blur": "^12.6.0",
     "expo-clipboard": "~4.3.1",
     "expo-contacts": "~12.2.0",
     "expo-font": "~11.4.0",
     "expo-haptics": "~12.4.0",
-    "expo-image": "~1.3.3",
+    "expo-image": "~1.3.4",
     "expo-linear-gradient": "~12.3.0",
-    "expo-media-library": "~15.4.1",
-    "expo-permissions": "~14.2.1",
+    "expo-media-library": "~15.6.0",
     "expo-sensors": "~12.3.0",
     "graphql": "^16.8.1",
     "graphql-relay": "^0.10.0",
@@ -94,6 +93,7 @@
     "react-native-mime-types": "^2.4.0",
     "react-native-mmkv": "^2.10.2",
     "react-native-pager-view": "6.2.1",
+    "react-native-permissions": "^3.10.0",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-quick-base64": "^2.0.7",
     "react-native-reanimated": "~3.5.4",
