fix: create video cover without crash (#1473)
* fix: create video cover without crash

* fix: remove print

--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -161,9 +161,10 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:4.14.2"
 
     // exoplayer dependencies
-    implementation 'com.google.android.exoplayer:exoplayer:2.18.2'
-    implementation 'com.google.android.exoplayer:exoplayer-transformer:2.18.2'
-    implementation 'com.google.android.exoplayer:exoplayer-effect:2.18.2'
+    implementation 'androidx.media3:media3-exoplayer:1.1.1'
+    implementation 'androidx.media3:media3-transformer:1.1.1'
+    implementation 'androidx.media3:media3-datasource:1.1.1'
+    implementation 'androidx.media3:media3-effect:1.1.1'
 
     constraints {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
