--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -23,7 +23,8 @@
     "validator": "^13.11.0",
     "vcard-creator": "^0.6.0",
     "iron-webcrypto": "^0.8.0",
-    "chroma-js": "^2.4.2"
+    "chroma-js": "^2.4.2",
+    "csv42": "5.0.0"
   },
   "devDependencies": {
     "@types/relay-runtime": "^14.1.12",
