feat: implements real stats (#1549)
* feat: implements real stats

* fix: make animation works if only 0 value (division by zero)

* feat: add a bottom line visible even for zero

* feat: create LikedPost screen

* fix: nbPostLike typo between resolver and database

* chore: typo

* feat: webcard view on web

* fix: adress review

* remove file

* remove unsued import

--- a/codegen.yml
+++ b/codegen.yml
@@ -42,6 +42,7 @@ generates:
         CardStyle: ../../domains#CardStyle as CardStyleModel
         ContactCard: ../../domains#Profile as ProfileModel
         ColorPalette: ../../domains#ColorPalette as ColorPaletteModel
+        Statistic: ../../domains#Statistic as StatisticModel
       defaultMapper: 'Partial<{T}>'
       maybeValue: 'T extends PromiseLike<infer U> ? Promise<U | null> : T | null'
       scalars:
