build: make an independant install of vercel-cli

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -269,7 +269,7 @@ jobs:
       #
       ############################################
       - name: Install Vercel CLI
-        run: yarn global add vercel@latest
+        run: npm i -g vercel@latest
 
       - name: Azzapp Web - Pull Vercel configuration 
         env:
