--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,6 +23,7 @@
     "@envelop/sentry": "^6.0.1",
     "@graphql-yoga/plugin-persisted-operations": "^2.0.4",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@sendgrid/mail": "^7.4.6",
     "@sentry/nextjs": "^7.70.0",
     "@sentry/tracing": "^7.70.0",
     "@vercel/og": "^0.5.17",
