feat: Webcard Parameters && Redirection (#1766)
* wip

wip

sdf

wip

feat: Webcard Paramaters && redirection

* feat: redirection from middleware to keep scanData and SEO

* fix: plural cache

* fix: lint and typecheck

* fix: review

* feat: deeplinking for post

* fix: label

* ranming

* fix: errors message missing in ts

* fix statistics Charts on home page

* fix: totla statistics

* rebase and fix with mutli user

* fix: signin and profile link home

* restore value

--- a/codegen.yml
+++ b/codegen.yml
@@ -45,6 +45,7 @@ generates:
         ProfileStatistic: ../../domains#ProfileStatistic as ProfileStatisticModel
         WebCard: ../../domains#WebCard as WebCardModel
         User: ../../domains#User as UserModel
+        RedirectWebCard: ../../domains#RedirectWebCard as RedirectWebCard
       defaultMapper: 'Partial<{T}>'
       maybeValue: 'T extends PromiseLike<infer U> ? Promise<U | null> : T | null'
       scalars:
