--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -1,4 +1,4 @@
-DATABASE_HOST=""
+^DATABASE_HOST=""
 DATABASE_USERNAME=""
 DATABASE_PASSWORD=""
 TOKEN_SECRET=token-secret_that_contains_at_least_32_characters
