feat:  Mobile App > Add new font #1949 && web (#2006)

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,19 +18,28 @@
     "@azzapp/i18n": "0.5.2-canary.54",
     "@azzapp/relay": "0.5.2-canary.54",
     "@azzapp/shared": "0.5.2-canary.54",
+    "@expo-google-fonts/amatic-sc": "^0.2.3",
     "@expo-google-fonts/anton": "^0.2.3",
     "@expo-google-fonts/archivo": "^0.2.3",
+    "@expo-google-fonts/bebas-neue": "^0.2.3",
+    "@expo-google-fonts/cardo": "^0.2.3",
     "@expo-google-fonts/cinzel": "^0.2.3",
+    "@expo-google-fonts/cormorant-garamond": "^0.2.3",
     "@expo-google-fonts/courier-prime": "^0.2.3",
     "@expo-google-fonts/dm-serif-display": "^0.2.3",
     "@expo-google-fonts/fauna-one": "^0.2.3",
     "@expo-google-fonts/fraunces": "^0.2.3",
+    "@expo-google-fonts/gilda-display": "^0.2.3",
+    "@expo-google-fonts/gloock": "^0.2.3",
     "@expo-google-fonts/great-vibes": "^0.2.3",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/josefin-sans": "^0.2.3",
     "@expo-google-fonts/jost": "^0.2.3",
     "@expo-google-fonts/kaushan-script": "^0.2.3",
     "@expo-google-fonts/koulen": "^0.2.3",
+    "@expo-google-fonts/lexend": "^0.2.3",
+    "@expo-google-fonts/libre-baskerville": "^0.2.3",
+    "@expo-google-fonts/libre-caslon-display": "^0.2.3",
     "@expo-google-fonts/libre-caslon-text": "^0.2.3",
     "@expo-google-fonts/limelight": "^0.2.3",
     "@expo-google-fonts/lora": "^0.2.3",
@@ -39,23 +48,28 @@
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo-google-fonts/mr-dafoe": "^0.2.3",
     "@expo-google-fonts/open-sans": "^0.2.3",
+    "@expo-google-fonts/outfit": "^0.2.3",
     "@expo-google-fonts/playfair-display": "^0.2.3",
     "@expo-google-fonts/plus-jakarta-sans": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo-google-fonts/raleway": "^0.2.3",
     "@expo-google-fonts/righteous": "^0.2.3",
+    "@expo-google-fonts/rubik": "^0.2.3",
     "@expo-google-fonts/rye": "^0.2.3",
     "@expo-google-fonts/seaweed-script": "^0.2.3",
+    "@expo-google-fonts/six-caps": "^0.2.3",
     "@expo-google-fonts/source-sans-pro": "^0.2.3",
+    "@expo-google-fonts/ultra": "^0.2.3",
+    "@expo-google-fonts/water-brush": "^0.2.3",
     "@expo-google-fonts/yeseva-one": "^0.2.3",
     "@formatjs/intl-locale": "^3.3.4",
     "@formatjs/intl-pluralrules": "^5.2.6",
     "@formatjs/intl-relativetimeformat": "^11.2.6",
     "@hookform/resolvers": "^3.3.1",
     "@react-native-async-storage/async-storage": "1.19.8",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-native/metro-config": "^0.73.2",
-    "@react-native-community/datetimepicker": "^7.6.2",
     "@reeq/react-native-passkit": "^0.1.2",
     "@sentry/react-native": "5.14.1",
     "@shopify/flash-list": "1.6.3",
