feat(Cover): animations (#2029)
* implement mobile text animation

* Media animation

* factorize reanimated control

* Animated lottie

* Finish media and text animation

* few fix

* Update project.pbxproj

* Update project.pbxproj

* Update StaticMediaSection.tsx

* Delete LottiePlayer.tsxgne

* Address PR feedbacks

--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -15,18 +15,20 @@
   "dependencies": {
     "@azzapp/data": "0.5.2-canary.63",
     "@azzapp/shared": "0.5.2-canary.63",
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
+    "@dotlottie/react-player": "^1.6.6",
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/x-data-grid": "latest",
-    "@dnd-kit/core": "^6.0.8",
-    "@dnd-kit/sortable": "^7.0.2",
-    "@dnd-kit/utilities": "^3.2.1",
     "classnames": "^2.3.2",
     "drizzle-orm": "^0.28.6",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.12.2",
     "next": "^14.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
