--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -34,6 +34,7 @@
     "graphql-yoga": "^4.0.4",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.12.2",
     "lz-string": "^1.5.0",
     "next": "^14.0.1",
     "os-browserify": "^0.3.0",
